desktop-base (6.0.1) UNRELEASED; urgency=low

  * grub/grub_background.sh: invert highlight and normal text color for better
    readability.
  * run optipng on png files.
  * debian/preinst, debian/postinst, debian/postrm:
    - remove /etc/kde3/kdeglobals using dpkg-maintscript-helper closes: #603810

 -- Yves-Alexis Perez <corsac@debian.org>  Thu, 18 Nov 2010 13:02:41 +0100

desktop-base (6.0.0) unstable; urgency=low

  * The “Welcome Noémie” upload, adding Squeeze artwork.
  * debian/control:
    - update kde suggest to kde-standards.                      closes: #548244
    - update standards version to 3.9.1.
  * backgrounds:
    - add SpaceFun wallpaper
  * slashy:
    - add SpaceFun theme.
    - drop completely Moreblue Orbit theme.
  * kdm-theme:
    - add SpaceFun theme.
    - configure SpaceFun as the default theme.
  * debian/postinst:
    - add SpaceFun alternative at maximum level (default Squeeze theme).
    - rename grub alternative to add png extension so grub can find it.
    - run sync before updating grub to be sure the grub background has been
      written to disk.
  * debian/prerm:
    - rename grub alternative to add png extension.
  * Makefile: 
    - drop unused rules for KDE3 and Xfce 4.4.
    - add SpaceFun gdm3 theme.
    - add SpaceFun kdm theme. 
    - install grub theme and script.
  * {ksplash,kdm}-theme/moreblue-orbit{-default}:
    - drop “Debian” word from image to only use DFSG-free logo. closes: #587668
  * debian/copyright updated for the new theme.
  * grub:
    - add SpaceFun grub theme.
    - add a grub_background.sh which will override settings in grub and
      correctly set the default theme.
  * debian/README.Debian updated.
  * splash:
    - add SpaceFun splash.
  * profiles/xdg-config/xfce4/xfconf/xfce-perchannel-xml/xfce4-session.xml:
    - update colors to match new splash screen.

 -- Yves-Alexis Perez <corsac@debian.org>  Mon, 15 Nov 2010 19:58:48 +0100

desktop-base (5.0.6) unstable; urgency=low
