@@ -5,8 +5,12 @@ desktop-base (6.0.1) UNRELEASED; urgency=low
   * run optipng on png files.
   * debian/preinst, debian/postinst, debian/postrm:
     - remove /etc/kde3/kdeglobals using dpkg-maintscript-helper closes: #603810
+  * kdesktoprc:
+    - use the desktop-background alternative in KDE config.
+  * Makefile:
+    - re-introduce kdeglobals, this time for KDE4.
 
- -- Yves-Alexis Perez <corsac@debian.org>  Thu, 18 Nov 2010 13:02:41 +0100
+ -- Yves-Alexis Perez <corsac@debian.org>  Thu, 18 Nov 2010 15:04:51 +0100
 
 desktop-base (6.0.0) unstable; urgency=low
 
